# oibvh-tree

./: CMakeLists.txt  README.md  bvh_fragment_shader.glsl  bvh_vertex_shader.glsl  kernel.cl.c  main.cpp  mesh_fragment_shader.glsl  mesh_vertex_shader.glsl  oibvhConfig.h.in  oibvh_draw.cpp  oibvh_draw.h  oibvh_opencl.cpp  oibvh_opencl.h  shared.h  utils.h
cmake/: FindOpenCL.cmake
